# axum-admin-web

./: README.md
apps/: Cargo.toml
apps/admin/: .env  .gitignore  Cargo.toml  README.md  config.yaml
apps/admin/src/: asset.rs  main.rs  router.rs
apps/admin/src/config/: env.rs  mod.rs  sqlite.rs
apps/admin2/: Cargo.toml  Makefile  README.md  config.yaml
apps/admin2/src/: asset.rs  main.rs  router.rs  server.rs
apps/admin2/src/config/: mod.rs  mysql.rs
apps/crates/app_state/: Cargo.toml
apps/crates/app_state/src/: lib.rs
apps/crates/axum_mock/: Cargo.toml
apps/crates/axum_mock/src/: request.rs
apps/crates/core/cache/: Cargo.toml
apps/crates/core/cache/src/: lib.rs  storage.rs
apps/crates/core/code/: Cargo.toml
apps/crates/core/code/src/: error.rs  error_msg.rs  lib.rs
apps/crates/core/context/: Cargo.toml
apps/crates/core/context/src/: context.rs  extractor.rs  lib.rs  middleware.rs
apps/crates/core/database/: Cargo.toml  README.md
apps/crates/core/database/src/: config.rs  lib.rs  mock.rs  pool.rs
apps/crates/core/database/tests/: mock_test.rs  sqlite_test.rs
apps/crates/core/database/tests/common/: mod.rs  schem.rs  user.rs
apps/crates/core/entity/: Cargo.toml
apps/crates/core/entity/src/log/: log_api_operation.rs  log_system.rs  log_web.rs  mod.rs
apps/crates/core/entity/src/organization/: department.rs  department_role_rel.rs  mod.rs  position.rs  rank.rs
apps/crates/core/entity/src/permission/: menu.rs  menu_role_rel.rs  mod.rs  openapi.rs  openapi_role_rel.rs  token.rs  token_role_rel.rs
apps/crates/core/entity/src/schedule/: mod.rs  schedule_event_log.rs  schedule_job.rs  schedule_status_log.rs
apps/crates/core/entity/src/system/: mod.rs  sys_config.rs  sys_dict_data.rs  sys_dict_dimension.rs  sys_image_captcha.rs  sys_image_resource.rs
apps/crates/core/entity/src/template/: app_template.rs  mod.rs
apps/crates/core/entity/src/user/: blockchain_wallet.rs  email.rs  location.rs  member_level.rs  mod.rs  phone.rs  role.rs  user_base.rs  user_login_log.rs  user_role_rel.rs
apps/crates/core/inject/: Cargo.toml
apps/crates/core/inject/src/: lib.rs
apps/crates/core/logger/: Cargo.toml  README.md
apps/crates/core/logger/examples/: logger.rs
apps/crates/core/logger/src/: config.rs  lib.rs
apps/crates/core/logger/src/layer/: console_bunyan.rs  console_costom_print.rs  file.rs  mod.rs
apps/crates/core/logger/src/utils/: mod.rs  time.rs
apps/crates/core/migration/: Cargo.toml
apps/crates/core/migration/examples/: migration.rs
apps/crates/core/migration/src/: lib.rs
apps/crates/core/migration/src/log/: log_api_operation.rs  log_system.rs  log_web.rs
apps/crates/core/migration/src/organization/: department_role_rel.rs  mod.rs  position.rs
apps/crates/core/migration/src/permission/: menu.rs  menu_role_rel.rs  mod.rs  openapi.rs  openapi_role_rel.rs  token.rs  token_role_rel.rs
apps/crates/core/migration/src/schedule/: mod.rs
apps/crates/core/migration/src/system/: mod.rs  sys_config.rs  sys_dict_data.rs  sys_dict_dimension.rs  sys_image_captcha.rs  sys_image_resource.rs
apps/crates/core/migration/src/template/: mod.rs
apps/crates/core/migration/src/user/: blockchain_wallet.rs  email.rs  mod.rs  phone.rs  role.rs  user_base.rs  user_login_log.rs  user_role_rel.rs
apps/crates/core/response/: Cargo.toml
apps/crates/core/response/src/: lib.rs  response.rs  response2.rs  response_err.rs
apps/crates/core/scheduler/: Cargo.toml
apps/crates/core/scheduler/examples/: cron_scheduler.rs  scheduler.rs
apps/crates/core/scheduler/src/: dao.rs  error.rs  job.rs  job_scheduler.rs  lib.rs  register.rs
apps/crates/core/utils/: Cargo.toml
apps/crates/core/utils/src/: asset.rs  json.rs  lib.rs
apps/crates/grpc-api/: Cargo.toml  README.md  build.rs
apps/crates/grpc-api/proto/: api.proto
apps/crates/grpc-api/protos/: api.proto
apps/crates/grpc-api/src/: lib.rs
apps/crates/grpc-api/src/proto/: api.rs
apps/crates/grpc_api/: Cargo.toml
apps/crates/grpc_api/examples/: client.rs  server.rs
apps/crates/grpc_api/proto/: helloworld.proto
apps/crates/middleware/: Cargo.toml  README.md
apps/crates/middleware/src/: api_operation.rs  casbin_auth.rs  constant.rs  cors.rs  lib.rs  openapi_auth.rs  system_api_auth.rs
apps/crates/mock_request/: Cargo.toml
apps/crates/mock_request/src/: lib.rs  request.rs
apps/crates/plugins/: Cargo.toml
apps/crates/plugins/src/: lib.rs
apps/crates/service_hub/: Cargo.toml  README.md
apps/crates/service_hub/auth/: Cargo.toml
apps/crates/service_hub/auth/src/: lib.rs
apps/crates/service_hub/auth/src/common/: captcha.rs  mod.rs
apps/crates/service_hub/auth/src/controller/: login.rs  logout.rs  register.rs
apps/crates/service_hub/auth/src/dao/: register.rs
apps/crates/service_hub/auth/src/dto/: login.rs  mod.rs  register.rs
apps/crates/service_hub/auth/src/router/: captcha.rs  login.rs  logout.rs  mod.rs  register.rs
apps/crates/service_hub/initialize/: Cargo.toml  README.md
apps/crates/service_hub/initialize/src/: asset.rs  lib.rs
apps/crates/service_hub/log/: Cargo.toml
apps/crates/service_hub/log/src/: lib.rs
apps/crates/service_hub/log/src/dao/: mod.rs  (+4 more)
apps/crates/service_hub/organization/: Cargo.toml
apps/crates/service_hub/organization/src/: lib.rs
apps/crates/service_hub/permission/: Cargo.toml
apps/crates/service_hub/permission/src/: lib.rs
apps/crates/service_hub/public/: Cargo.toml
apps/crates/service_hub/public/src/: lib.rs
apps/crates/service_hub/schedule/: Cargo.toml  README.md
apps/crates/service_hub/schedule/src/: lib.rs
apps/crates/service_hub/src/: lib.rs
apps/crates/service_hub/system/: Cargo.toml
apps/crates/service_hub/system/src/: constant.rs  lib.rs
apps/crates/service_hub/template/: Cargo.toml
apps/crates/service_hub/template/src/: lib.rs
apps/crates/service_hub/template/tests/: template_dao_mock.rs.bak
apps/crates/service_hub/user/: Cargo.toml
apps/crates/service_hub/user/src/: cached.rs  lib.rs
apps/crates/timer/: Cargo.toml  README.md
apps/crates/timer/src/: demo.rs  demo2.rs  lib.rs
(+244 files in other folders)
