[workspace]
resolver = "2"
members = [
    # 核心组件
    "crates/core/code",
    "crates/core/response",
    "crates/core/database",
    "crates/core/context",
    "crates/core/inject",

    # 组件
    "crates/service_hub",

    # 应用
    "admin",
    "crates/grpc-api",
]

[workspace.dependencies]
# 网络相关
tokio = "1.42"
async-std = "1.13"
axum = "0.7"
axum-extra = "0.9"
tower = "0.5"
tower-http = "0.6"
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tonic-build = "0.12"
reqwest = "0.12"
prost = "0.13"


# 数据库
sea-orm = "1.1"
sea-orm-migration = "1.1"
sqlx = "0.8"


# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 日志
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"


# 工具
contextchronoclap = "4.5"
toml = "0.8"
serde_json = "1.0"
serde_repr = "0.1"
serde = "1.0"
futures = "0.3"
uuid = "1.9"
nject = "0.4"
async-trait = "0.1"
validator = "0.19"
chrono = "0.4"
rust_decimal = "1.36"
jsonwebtoken = "9.3"
uap-rust = "0.0.4"
captcha-rs = "0.2"
rust-embed = "8.5"
sha2 = "0.10"
base64 = "0.22"
regex = "1.11"
moka = "0.12"
tokio-cron-scheduler = "0.13"
colored = "2.2"
dotenv = "0.15"
