[workspace]
resolver = "2"
members = [
    # 核心组件
    "crates/core/code",
    "crates/core/response",
    "crates/core/database",
    "crates/core/context",
    "crates/core/inject",
    "crates/core/entity",
    "crates/core/migration",
    "crates/core/jwt",
    "crates/core/scheduler",
    "crates/core/utils",
    "crates/core/logger",
    "crates/core/cache",

    # 组件
    "crates/app_state",
    "crates/axum_mock",
    "crates/middleware",
    "crates/grpc_api",
    "crates/plugins",
    "crates/service_hub",
    "crates/timer",

    # 应用
    "admin",
]


[workspace.dependencies]
# 网络相关
tokio = "1.42"
async-std = "1.13"
async-trait = "0.1"
axum = "0.7"
axum-extra = "0.9"
axum-test = "16.4"
tower = "0.5"
tower-http = "0.6"
tower_governor = "0.5"
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tonic-build = "0.12"
reqwest = "0.12"
prost = "0.13"
validator = "0.19"
listenfd = "1.0"
num_cpus = "1.16"

# 数据库`
sea-orm = "1.1"
sea-orm-migration = "1.1"
sqlx = "0.8"


# 错误处理
thiserror = "2.0"
anyhow = "1.0"


# 日志
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-error = "0.2"
color-eyre = "0.6"


# 加密
uuid = "1.9"
sha2 = "0.10"
base64 = "0.22"

# 工具
# contextchronoclap = "4.5"
toml = "0.8"
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.9"
serde = "1.0"
futures = "0.3"
nject = "0.4"
time = "0.3"
chrono = "0.4"
rust_decimal = "1.36"
jsonwebtoken = "9.3"
uap-rust = "0.0.4"
captcha-rs = "0.2"
rust-embed = "8.5"
regex = "1.11"
moka = "0.12"
tokio-cron-scheduler = "0.13"
colored = "2.2"
dotenv = "0.15"
casbin = "2.5"
once_cell = "1.20"
