[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
code = { path = "../crates/core/code" }
response = { path = "../crates/core/response" }


axum = { workspace = true }
axum-extra = { workspace = true, features = ["cookie-private"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }
