[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
code = { path = "../crates/core/code" }
database = { path = "../crates/core/database" }
response = { path = "../crates/core/response" }
logger = { path = "../crates/core/logger" }
utils = { path = "../crates/core/utils" }
inject = { path = "../crates/core/inject" }
middleware = { path = "../crates/middleware" }


axum = { workspace = true }
axum-extra = { workspace = true, features = ["cookie-private"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true, features = [
    "fs",
    "trace",
    "cors",
    "limit",
    "compression-gzip",
    "timeout",
] }


listenfd = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
rust-embed = { workspace = true, features = [
    # "debug-embed",
    "include-exclude",
    "mime-guess",
] }
colored = { workspace = true }
