[package]
name = "axum_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../core/database" }
entity = { path = "../core/entity" }
migration = { path = "../core/migration" }
response = { path = "../core/response" }
inject = { path = "../core/inject" }


axum = { workspace = true }
axum-test = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }

serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-sqlite",
] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
