[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[lib]
name = "middleware"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
code = { path = "../core/code" }
response = { path = "../core/response" }
context = { path = "../core/context" }
entity = { path = "../core/entity" }
jwt = { path = "../core/jwt" }
service_hub = { path = "../service_hub" }


# actix-http = { workspace = true }
actix-cors = { workspace = true }
casbin = { workspace = true }

tracing = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
