[package]
name = "cache"
version = "0.1.0"
edition = "2021"

[dependencies]
moka = { workspace = true, features = ["future"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
