[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { workspace = true }

log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }
