[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
code = { path = "../code" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
captcha-rs = { workspace = true }
sha2 = { workspace = true }
rust-embed = { workspace = true, features = ["mime-guess"] }
uap-rust = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
