[package]
name = "initialize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../../core/database" }
entity = { path = "../../core/entity" }
code = { path = "../../core/code" }
response = { path = "../../core/response" }
utils = { path = "../../core/utils" }
inject = { path = "../../core/inject" }

permission = { path = "../permission" }


validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
nject = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
rust-embed = { workspace = true, features = [
    # "debug-embed",
    "include-exclude",
    "mime-guess",
] }
