[package]
name = "schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../../core/database" }
entity = { path = "../../core/entity" }
code = { path = "../../core/code" }
response = { path = "../../core/response" }
scheduler = { path = "../../core/scheduler" }
inject = { path = "../../core/inject" }


validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
nject = { workspace = true }

uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
