[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../../core/database" }
entity = { path = "../../core/entity" }
code = { path = "../../core/code" }
response = { path = "../../core/response" }
inject = { path = "../../core/inject" }


axum = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
nject = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }


[dev-dependencies]
axum-test = { workspace = true }
axum_mock = { path = "../../axum_mock" }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
